--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <meta name="description" content="Egyption Party site" />
     <meta name="keywords" content="Egyption Party , حزب مصر " />
     <meta name="author" content="ABDELRAHMAN RADWAN" />
+    <!----------------------OG------------------------------>
+    <meta name="title" property="og:title" content="Abdelrhman Radwan" />
+    <meta name="type" property="og:type" content="website" />
+    <meta
+      name="url"
+      property="og:url"
+      content="https://abdelrahman-radwan-24.github.io/Egyption-Party/"
+    />
+    <meta
+      name="image"
+      property="og:image"
+      content="https://myogs.s3.amazonaws.com/Abdelrhman.jpg"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta
+      name="description"
+      property="og:description"
+      content="I'm Abdelrahman Radwan, a passionate software developer.I'm currently studying front-end development  to enhance my skills.I always seek to improve my knowledge and search for opportunities to apply it."
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <!----------------------OG------------------------------>
     <!--?=============> Favicon <==============-->
     <link
       rel="shortcut icon"
